--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "gulp-concat-css": "^3.1.0",
     "gulp-ftp": "^1.1.0",
     "gulp-sass": "^4.0.1"
+  },
+  "dependencies": {
+    "gulp-wait": "0.0.2"
   }
 }
